# FamilyKom

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  settings.py  version.py
src/: __init__.py
src/calculators/: __init__.py  ehegattenunterhalt.py  kindesunterhalt.py  rvg.py  zugewinn.py
src/calculators/engine/: __init__.py  base.py  ehegattenunterhalt.py  kindesunterhalt.py  ruleset.py  rvg.py  zugewinn.py
src/data/: __init__.py  gerichte.py
src/database/: __init__.py  redis_cache.py  schema.sql  supabase_client.py
src/pages/: __init__.py
src/pages/admin/: __init__.py  benutzerverwaltung.py  dashboard.py
src/pages/anwalt/: __init__.py  dokumentenanforderung.py  ehegattenunterhalt.py  kindesunterhalt.py  rvg.py  zugewinn.py
src/pages/mandant/: __init__.py  dokumente.py
src/services/: __init__.py  auth_service.py  email_service.py  import_service.py  ocr_service.py
src/utils/: __init__.py
tests/: __init__.py  test_kindesunterhalt.py
